<resources>
    <string name="description">试验描述</string>
    <string name="record">试验记录</string>
    <string name="EXP_GPS">GPS试验</string>
    <string name="EXP_PDR">PDR试验</string>
    <string name="tvlen">步长模型</string>
    <string name="len1">常数模型</string>
    <string name="len2">线性模型</string>
    <string name="len3">非线性模型</string>
    <string name="tvori">方向估计方法</string>
    <string name="ori1">加速度传感器与磁力计</string>
    <string name="startpdr">开始</string>
    <string name="endpdr">结束</string>
    <string name="pdrback">返回</string>
    <string name="btn_confirm">确认</string>
    <string name="gpsback">返回</string>
    <string name="gpsstart">开始GPS试验</string>






    <string name="app_name">PDR_Experiment</string>
    <string name="locate">定位</string>

    <string name="pedometer">计步器</string>
    <string name="peak">波峰检测算法</string>
    <string name="detectsensor">计步传感器</string>
    <string name="GPStrack">GPS轨迹</string>
    <string name="PDRtrack">PDR轨迹</string>

    <string name="title_activity_gps2">GPS2Activity</string>
</resources>
