<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvlen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvlen" />

    <RadioGroup
        android:id="@+id/rglen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/len1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/len1" />

        <RadioButton
            android:id="@+id/len2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/len2" />

        <RadioButton
            android:id="@+id/len3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/len3" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvori" />

    <RadioGroup
        android:id="@+id/rgori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/ori1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ori1" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm" />

</LinearLayout>